<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/list_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dip"
        android:layout_marginRight="19dip"
        android:layout_marginTop="15.0dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/change_passwd_origin"
            style="@style/login_input_item_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin_passwd"
            android:password="true"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/change_passwd_new"
            style="@style/login_input_item_middle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_passwd"
            android:imeOptions="actionNext"
            android:password="true" />

        <EditText
            android:id="@+id/change_passwd_new_again"
            style="@style/login_input_item_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_passwd_again"
            android:imeOptions="actionGo"
            android:password="true" />

    </LinearLayout>

    <Button
        android:id="@+id/change_passwd_btn"
        style="@style/IgGreenButtonStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="15.0dip"
        android:enabled="false"
        android:text="@string/change_passwd" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/regoster_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>